JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre3

Thanks to Brad Mace, Brant Langer Gurganus, Christoph Daniel Schulze,
Ken Turner and Ollie Rutherfurd for contributing to this release.

{{{ Editing

- The kill ring no longer shows duplicate entries, or entries that
  consist entirely of whitespace.

- Added emacs-like "deep indent" which can be enabled using the
  deepIndent buffer-local property:

  fooBar(baz,
         moreParameters,
	 ...); (Brad Mace)

- Just like the Find Previous command, S+ENTER in the search bar now
  shows an error message if regular expression search is enabled.
  Previously it would just search forward.

- The "Format Paragraph" command now shows an error message instead of
  just beeping if the wrap margin is not set.

- The "Paste Previous" and "Paste From List" dialog boxes now show the
  selected item in a multiple-line text area (Ollie Rutherfurd).

}}}
{{{ Syntax Highlighting

- Added LOTOS syntax highlighting (Ken Turner).

- Added SDL/PL syntax highlighting (Ken Turner).

- Added IMPORT element to RULES tag. All rules from the ruleset named
  by the required attribute DELEGATE are copied into this ruleset.

- Improved Velocity syntax highlighiting.

- Added TPL syntax highlighting (Brant Langer Gurganus).

- Added UnrealScript syntax highlighting (Christoph Daniel Schulze)

}}}
{{{ User Interface

- Activity Log now autoscrolls when dragging the mouse outside the log
  area bounds.

- Docked window menu buttons should now look better on MacOS X.

- When closing a buffer, the previous buffer is now selected, not the
  first buffer. The code that does this was actually there all along,
  but it never worked and I didn't notice (it would just go to the first
  buffer).

- On Windows, entering X:\ or X:/ where X is a drive letter will
  automatically list that drive so that further paths can be completed.
  This is similar to how on Unix entering / opens the root directory.

}}}
{{{ Plugin Manager
